--- a/export/resources/fieldsets/button_types.yaml
+++ b/export/resources/fieldsets/button_types.yaml
@@ -40,6 +40,25 @@ fields:
                     width: 50
                     validate:
                       - required
+            email_button:
+              display: 'Email Button'
+              fields:
+                -
+                  handle: button_text
+                  field:
+                    type: text
+                    display: 'Button Text'
+                    width: 50
+                    validate:
+                      - required
+                -
+                  handle: email_address
+                  field:
+                    type: text
+                    display: 'Email Address'
+                    validate:
+                      - required
+                    width: 50
   -
     import: alignment
   -
