--- a/export/resources/fieldsets/map.yaml
+++ b/export/resources/fieldsets/map.yaml
@@ -1,6 +1,28 @@
 title: Map
 fields:
   -
+    handle: style
+    field:
+      type: section
+      display: Style
+  -
+    handle: map_style
+    field:
+      type: select
+      display: 'Map Style'
+      default: warm_topographic
+      options:
+        light: Light
+        light_no_labels: 'Light (No Labels)'
+        topographic: Topographic
+        topographic_no_labels: 'Topographic (No Labels)'
+        warm_topographic: 'Warm Topographic'
+        satellite: 'Satellite Imagery'
+        dark: Dark
+        dark_no_labels: 'Dark (No Labels)'
+      validate:
+        - required
+  -
     handle: main_location
     field:
       type: section
@@ -10,6 +32,15 @@ fields:
     field:
       type: text
       display: 'Building Name'
+      width: 50
+      validate:
+        - required
+  -
+    handle: building_pin_color
+    field:
+      default: '#000000'
+      type: color
+      display: 'Building Pin Color'
       width: 50
       validate:
         - required
@@ -36,7 +67,6 @@ fields:
       container: assets
       type: assets
       display: 'Optional Map Icon'
-      width: 50
   -
     handle: additional_map_points
     field:
