--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -18,9 +18,11 @@ export_paths:
   - public/assets/logo-mark-teal.svg
   - public/assets/logo-mark-white-sm.svg
   - public/assets/logo-mark-white.svg
-  - vite.config.js
 dependencies:
+  cboxdk/statamic-mcp: ^0.8.0
   jacksleight/statamic-bard-texstyle: ^3.4
   league/flysystem-aws-s3-v3: ^3.0
   statamic/seo-pro: ^6.5
   statamic/ssg: ^3.1
+dependencies_dev:
+  laravel/boost: ^1.1
